about to start employment calculator

--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -4,6 +4,17 @@
 {% block about_me %}
 
     <div class="standard_size">
+
+        <br>
+
+        <div id="about_me_introduction_container">
+
+            <p id="about_me_introduction_p">Hi there. My name is Jarret Laberdee. I am currently 29 years old and looking for a change of pace in my career. I've written a little bit about myself. Please take a look!</p>
+
+        </div>
+
+        <br>
+
         <ul id="about_me_page_ul">
 
 
@@ -11,6 +22,7 @@
                 <hr class="about_me_hr">
                 <h5 class="about_me_blue_text_highlight">Background</h5>
                 <hr class="about_me_hr">
+                <br>
                 <p>From a young age, I vividly recall being captivated by gadgetry. Due to my problem-solving nature and interest in how things work, I have always been the "go-to" guy for technologically-related issues (<i>primarily turning the router on and off again for 
                 family members</i>). I enjoy laying out a problem and taking incremental steps towards a solution. 
                 <br>
@@ -19,6 +31,7 @@
                 translated 0's and 1's into the technological goods and services that envelop our lives.</p>
             </li>
 
+            <br>
             <hr class="about_me_hr">
 
             <li>
@@ -44,16 +57,18 @@
                 with Python. (Including this very project) I currently utilize Django as my primary framework. 
                 <br>
                 <br>
-                <i>Node.js</i> - Javascript's plunge into backend? Using Chrome's V8 Engine this is an extremely powerful language, especially for firing up a web server and displaying some pages. Node.js was the second 
+                <i>Node.js</i> - Javascript's plunge into backend? Using Chrome's V8 Engine this is an extremely powerful language, especially for firing up a web server and displaying some content. Node.js was the second 
                 language I invested any time into and I will definitely be returning to better familiarize myself with it. 
                 </p>
             </li>
 
+            <br>
             <hr class="about_me_hr">
 
             <li>
                 <h5 class="about_me_blue_text_highlight">Professionally Acquired Experience</h5>
                 <hr class="about_me_hr">
+                <br>
 
                 <p> Since my hire in February of 2015, I have worked very intimately with our Enterprise Resource Planning systems here at Fiat Chrysler 
                 Automobiles. Being an employee in the Logistics department, we work within an IBM-developed operating system (z/OS) using a zSeries terminal emulator (TN3270) across telnet 
@@ -67,11 +82,13 @@
                 </p>
             </li>
 
+            <br>
             <hr class="about_me_hr">
 
             <li>
                 <h5 class="about_me_blue_text_highlight">Technological Goals</h5>
                 <hr class="about_me_hr">
+                <br>
 
                 <p>For me, the data-driven intertwinement between man and machine transcends more than mere curiousity. For me, it is a responsibility to adapt and evolve in order to stay current. With data being an ever-more 
                 valuable currency in today's day and age, in my opinion there will be left two groups of people: Those whose job it is to automate, 
@@ -79,12 +96,15 @@
 
             </li>
 
+            <br>
             <hr class="about_me_hr">
 
             <li>
                 <h5 class="about_me_blue_text_highlight">Resume</h5>
                 <hr class="about_me_hr">
-                <p>I've attached a copy of my resume below. While it doesn't reflect all of my personal accomplishments as nicely as I'd like, feel free to take a copy with you on your search for the right employee.</p>
+                <br>
+
+                <p>I've attached a copy of my resume below. While it doesn't reflect all of my personal accomplishments as nicely as I'd like, feel free to take a copy with you on your search for the right candidate.</p>
 
             </li>
 
