--- a/Personal/Home/templates/connect.html
+++ b/Personal/Home/templates/connect.html
@@ -2,15 +2,15 @@
 
 {% block connect %}
 
-    <div class="page_header_container container">
-        <div class="page_header_text">
-            <h3>Let me know what you think!</p>
+    <div class="page_header_container container standard_size">
+        <div class="page_header_text standard_size">
+            <h5>Let me know what you think!</h5>
         </div>
 
         <hr style="width:50%">
     </div>
 
-    <div id="connect_page_outer_container">
+    <div id="connect_page_outer_container" class="standard_size">
 
         <div id="connect_page_introductory_text_container" class="container">
             <p>Hey! So hopefully you've gotten to know me a little from my About Me section. 
