update jquery to handle employment calculator

--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -70,7 +70,7 @@
                 <hr class="about_me_hr">
                 <br>
 
-                <p> Since my hire in February of 2015, I have worked very intimately with our Enterprise Resource Planning systems here at Fiat Chrysler 
+                <p> Since my hire in February of 2015 (<i>{{ elapsed_time }}</i>), I have worked very intimately with our Enterprise Resource Planning systems here at Fiat Chrysler 
                 Automobiles. Being an employee in the Logistics department, we work within an IBM-developed operating system (z/OS) using a zSeries terminal emulator (TN3270) across telnet 
                 protocol. We use this IBM mainframe emulator to access a large data reservoir somewhere within the company. This serves us as the main resource for managing our internal/external 
                 inventory/receiving levels and our internal/external delivery systems. 
