so many changes

--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -9,7 +9,7 @@
 
         <div id="about_me_introduction_container">
 
-            <p id="about_me_introduction_p">Hi there. My name is Jarret Laberdee. I am currently 29 years old and looking for a change of pace in my career. I've written a little bit about myself. Please take a look!</p>
+            <p id="about_me_introduction_p">Hi there. <span id="about_me_peace_icon"><i class="far fa-hand-peace"></i></span> My name is Jarret Laberdee. I am currently 29 years old and looking for a change of pace in my career. I've written a little bit about myself. Please take a look!</p>
 
         </div>
 
