--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -78,7 +78,7 @@
                 <br>
                 While working with the mainframe has some perks, including the amount of traffic it can handle (apparently ~2.5 billion 
                 transacions per day according to IBM), I believe my future exists working within the client/server architecture. While I admittedly don't know all the differences between the two, 
-                I truthfully don't think it's a worthwhile investment to learn a language like COBOL for my application needs.
+                it seems there is a great reserve of inormation surrounding applications built on client/server. 
                 </p>
             </li>
 
