--- a/Personal/Home/templates/connect.html
+++ b/Personal/Home/templates/connect.html
@@ -6,7 +6,6 @@
         <div id ="connect_heaeder_h5" class="page_header_text standard_size">
             <br>
             <h5>Give me a shout!</h5>
-            <br>
         </div>
     </div>
 
@@ -16,6 +15,7 @@
             <p>Hey! So hopefully you've gotten to know me a little from my About Me section. 
             In any case, I'd love to hear from you!
 
+            <br>
             <br>
             
             Not being from a software/web development background, I lack (what I consider) the necessary <i>network</i> of people who I can lean on and who can lean on me. This is really the primary goal of 
@@ -48,7 +48,7 @@
             <span id="connect_by_contact_form"><p id="connect_by_contact_form_p" class="connect_centered_li">Contact Form (Below)   <i id="connect_by_contact_form_i" class="far fa-file-alt"></i></p></span>
             
             <p>
-            Just a quick form I've created with Django, it basically sends you a receipt of the email, me the content of the email and also logs your information in my SQLite database (not that I would ever lose your information). In the form, 
+            Just a quick form I've created with Django, it basically sends you a receipt of the content, me an auto-generated email with the content and also logs the information in my SQLite database (not that I would ever lose your information). In the form, 
             I didn't request that the sender provide a phone number (I know some people are rustled by giving out that information), so if you choose to leave it in the body of the form, I can acquire it that way. 
             
             </p>
