--- a/Personal/Home/templates/email/connect_response.html
+++ b/Personal/Home/templates/email/connect_response.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet"/>
     <title>Automatically Generated Email</title>
 </head>
-<body style="background-color: #F7C991; font-size: 1.125rem">
+<body style="background-color: #F7C991; font-size: 11.5pt">
 
     <div style="background-color: #fff; margin: 0 auto; margin-top: 5%; width: 50%; padding: 10px; border: 2px solid #6e73ab; border-radius: .375rem; box-shadow: 1.25px 5px 5px #9FA3CC">
         <div style="text-align: center; margin: 0 auto; margin-top: 10px; margin-bottom: 10px; font-weight: bold;">
-            <p style="font-size: 1.375rem; padding: 0px; margin: 0px;">Special Delivery for {{ first_name }}</p>
+            <p style="padding: 0px; margin: 0px;">Special Delivery for {{ first_name }}</p>
         </div>
 
         <hr style="width: 75%; color: #6e73ab; border-top: 2px solid #6e73ab; box-shadow: 1.25px 1.125px 5px #9FA3CC">
