--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -53,6 +53,8 @@
     {% block random_word_generator %} {% endblock %}
     {% block pdf_parser %} {% endblock %}
     {% block display_content %} {% endblock %}
+    {% block 404 %} {% endblock %}
+    {% block 500 %} {% endblock %}
 
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
