everything has changed

--- a/Personal/Home/templates/error/404.html
+++ b/Personal/Home/templates/error/404.html
@@ -2,6 +2,10 @@
 
 {% block 404 %}
 
-<h1>Woah! Can't find what you're looking for! {...Where'd I put that thing...)</h1>
+<div class="standard_size">
+
+<h3>Easy There..</h3>
+
+<p>Where ya headed there partner?<p/>
 
 {% endblock %}
