--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,7 +13,7 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <link href="{% static 'css/hover.css' %}" rel="stylesheet" type="text/css" />
+    {% comment %} <link href="{% static 'css/hover.css' %}" rel="stylesheet" type="text/css" /> {% endcomment %}
     <link
       href="https://fonts.googleapis.com/css?family=Merienda"
       rel="stylesheet"
