--- a/Personal/Home/templates/error/500.html
+++ b/Personal/Home/templates/error/500.html
@@ -6,18 +6,21 @@
 
 <div class="standard_size error_page_container">
 
-    <h3>Oh god.. something went wrong...</h3>
+    <h3>Oh God... What Happened to the Server...</h3>
 
-    <p>I'm not good with computer</p>
+    <i><h3>500 Error</h3></i>
 
-    <p>Oh boy, I'm not good with computer</p>
+    <h5>Now if I could just find that URL...</h5>
 
-    <div id="error_500_error_div">
+    <div class="error_page_error_img_container">
 
-        <img id="error_500_error_image" src="{% static 'png/500.png' %}" alt="500.png" />
+        <img class="error_page_error_img_img" src="{% static 'png/500.png' %}" alt="500.png" />
 
     </div>
 
 </div>
+
+<div class="error_page_background_circle_container"></div>
+
 
 {% endblock %}
