--- a/Personal/Home/templates/error/500.html
+++ b/Personal/Home/templates/error/500.html
@@ -6,11 +6,15 @@
 
 <div class="standard_size error_page_container">
 
-    <h3>Oh God... What Happened to the Server...</h3>
+    <br>
 
-    <i><h3>500 Error</h3></i>
+    <h3>Oh God... I'm not good with computer</h3>
 
-    <h5>Now if I could just find that URL...</h5>
+    <p>Can't seem to locate <strong>{{url_var}}</strong>...</p>
+
+    <hr class="error_page_error_description_hr">
+
+    <h3><i>500</i> - Internal Server Error</h3>
 
     <div class="error_page_error_img_container">
 
