--- a/Personal/Home/templates/error/500.html
+++ b/Personal/Home/templates/error/500.html
@@ -10,7 +10,7 @@
 
     <h3>Oh God... I'm not good with computer</h3>
 
-    <p>Can't seem to locate <strong>{{url_var}}</strong>...</p>
+    <p>Can't seem to locate <strong>{{url_var}}</strong>... Are you sure you got the URL right?</p>
 
     <hr class="error_page_error_description_hr">
 
