background image added

--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -42,6 +42,12 @@
 
     <div id="left_curved_cover"></div>
     <div id="right_curved_cover"></div>
+
+    <div id="home_me_living_life_div">
+
+    <img id="home_me_living_life_img" src="{% static 'png/me_living_life_edited.png' %}" alt="Jarret in motion...">
+
+    </div>
   
 
     {% block home %}{% endblock %} 
