--- a/Personal/staticfiles/css/main.css
+++ b/Personal/staticfiles/css/main.css
@@ -959,6 +959,29 @@ div#main_header_right_half a:hover {
   color: #cfc259;
 }
 
+/* Home Page */
+
+div#home_me_living_life_div {
+  position: fixed;
+  width: auto;
+  height: auto;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -5;
+}
+
+img#home_me_living_life_img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  /* top: 50%;
+  left: 50%;
+  transform: translateX(-50%); */
+  opacity: .075;
+
+}
+
 /* About Me Page */
 
 .minimized_modal {
@@ -1802,7 +1825,7 @@ div.error_page_container h3 {
 
 div.error_page_error_img_container {
   position: absolute;
-  top: 60%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 50%;
@@ -1818,7 +1841,7 @@ img.error_page_error_img_img {
 
 div.error_page_background_circle_container {
   position: absolute;
-  top: 60%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #6e73ab;
